--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 </iframe>
 {% endif %}
 
+<a href="myOwnPage.html">an example of my own page... linked.</a>
+
 <h4>This is the workshop template.  Use it to create your own website.
 Delete these lines and please fill in 
 <a href="{{site.amy_site}}/submit">this self-organized workshop form</a>
