--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 </iframe>
 {% endif %}
 
-<a href="myOwnPage.html">an example of my own page... linked.</a>
+<a href="myOwnPage.md">an example of my own page... linked.</a>
 
 <h4>This is the workshop template.  Use it to create your own website.
 Delete these lines and please fill in 
